RFD Document Type - Update controller path and annotation change in RequestForDataGroup.cs
