# src/Wiedpug/Wiedpug.API/Controllers/RequestForDataOrStatusController.cs
@@ -10,22 +10,25 @@ using Wiedpug.Domain.AggregatesModel.RequestForDataOrStatusAggregate;
 // For more information on enabling Web API for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 
 namespace Wiedpug.API.Controllers
-{
-    [Route("api/[controller]")]
+{    
+    [Route("request-for-data-or-status")]    
     [ApiController]
     public class RequestForDataOrStatusController : ControllerBase
     {
 
         // POST api/<RequestForDataOrStatusController>
         [HttpPost]
-        [ValidateModelState]
-        [SwaggerResponse(statusCode: (int)HttpStatusCode.OK, type: typeof(ApiResult), description: "Successful request. Data will be returned if there is, otherwise, no data will be returned (e.g. No data found in the network or requestor has no access to the record)")]
-        [SwaggerResponse(statusCode: (int)HttpStatusCode.BadRequest, type: typeof(ApiResult), description: "Invalid request")]
-        [SwaggerResponse(statusCode: 401, description: "Unauthorized - login required")]
-        [SwaggerResponse(statusCode: 403, description: "Forbidden - lack of permission")]
-        [SwaggerResponseExample((int)HttpStatusCode.OK, typeof(RequestForDataOrStatus200Example))]
-        [SwaggerResponseExample((int)HttpStatusCode.BadRequest, typeof(RequestForDataOrStatus400Example))]
+        [ValidateModelState]        
+        [SwaggerResponse(statusCode: StatusCodes.Status200OK, type: typeof(ApiResult), description: "Successful request. Data will be returned if there is, otherwise, no data will be returned (e.g. No data found in the network or requestor has no access to the record)")]
+        [SwaggerResponse(statusCode: StatusCodes.Status400BadRequest, type: typeof(ApiResult), description: "Invalid request")]
+        [SwaggerResponse(statusCode: StatusCodes.Status401Unauthorized, description: "Unauthorized - login required")]
+        [SwaggerResponse(statusCode: StatusCodes.Status403Forbidden, description: "Forbidden - lack of permission")]
         [SwaggerRequestExample(typeof(RequestForDataOrStatus), typeof(RequestForDataRequestExample))]
+        [SwaggerResponseExample(StatusCodes.Status200OK, typeof(RequestForDataOrStatus200Example))]
+        [SwaggerResponseExample(StatusCodes.Status400BadRequest, typeof(RequestForDataOrStatus400Example))]        
+        [ProducesResponseType(StatusCodes.Status200OK)]
+        [ProducesResponseType(StatusCodes.Status400BadRequest)]
+        [ProducesResponseType(StatusCodes.Status403Forbidden)]        
         public void Post([FromBody] RequestForDataOrStatus model)
         {
         }
